--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.9.0",
     "reactstrap-date-picker": "0.0.11",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.15.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
