--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.15.0",
+    "history": "^4.10.1",
     "jquery": "^3.1.1",
     "morgan": "^1.10.0",
     "mysql": "^2.13.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-carousel": "^4.1.1",
