--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^5.0.0-beta2",
     "cookie-parser": "^1.4.5",
@@ -31,6 +32,7 @@
     "express": "^4.15.0",
     "history": "^4.10.1",
     "jquery": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.13.0",
     "node-sass": "^5.0.0",
